# Xed-Editor

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREATE_PLUGIN.md  Dockerfile  GEMINI.md  GEMINI_INTEGRATION_PHASE1_CHECKLIST.md  KEYBINDS.md  LICENSE  MCP_BUG_REPORT.md  README.md  Todo.md  bug.md  build.gradle.kts  changelog.md  changelog.txt  commit.sh  filetree.aar  filewrapper.aar  gradle.properties  job-logs.txt  package-lock.json  privacy_policy.md  pro.md  renovate.json  res.aar  settings.gradle.kts  temp_kotlin.kt  terms_and_conditions.md  themeTemplate.json  todo.txt  version.properties
.androidide/editor/: openedFiles.json  openedFiles.json.bak
.claude/: .gitignore
.gemini/: settings.json  xed-ide-server-12615-46653.json  xed-ide-server-20029-38641.json  xed-ide-server-21685-46555.json  xed-ide-server-28305-36279.json  xed-ide-server-28960-43355.json  xed-ide-server-31672-44947.json
.githooks/: pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: close-duplicates.js  close-duplicates.mjs  ensure-sorax.sh  improve-title-gemini.js  scan-translations.js
.github/workflows/: ai-pr-review.yml  android.yml  build-clone-apk.yml  build-debug-apk.yml  codeql.yml  debug-build.yml  deleteoldrus.yml  duplicate-issue.yml  issue-title.yml  issues.yml  ktfmt-check.yml  newCommit.sh  newRelease.sh  newRelease.yml  newStar.js  newStar.sh  newStar.yml  reproducible.yml  update-soraX.yml  upload-sdk.yml  verify-translations.yml  verifyTranslation.yml  verifyTranslations.kts
.github/workflows/newStar/: newStar.js  package-lock.json  package.json
.specstory/: summary.md
FileTree/: build.gradle.kts
Resources/: build.gradle.kts
SettingDSL/api/: library.api
app/: .gitignore  build.gradle.kts  proguard-rules-apply.pro  proguard-rules.pro
app/ExternalEditor/: build.gradle.kts
app/externalEditor/: build.gradle.kts
app/libTreeView/: build.gradle.kts
app/src/main/: AndroidManifest.xml
baselineprofile/: build.gradle.kts
benchmark/: build.gradle.kts
benchmark2/: build.gradle.kts
commons/: build.gradle.kts
core/: Integration.md
core/ScriptingEngine/: build.gradle.kts
core/agent-runtime/: build.gradle.kts
core/agent-tools-search/: build.gradle.kts
core/ai/: build.gradle.kts
core/ai-mcp-client/: build.gradle.kts
core/ai-models/: build.gradle.kts
core/ai-persistence/: build.gradle.kts
core/ai-providers/: build.gradle.kts
core/ai-streaming/: build.gradle.kts
core/bridge/: build.gradle.kts
core/bridge/src/main/cpp/: CMakeLists.txt  bridge.cpp  socket.cpp  socket.h
core/commons/: build.gradle.kts
core/components/: build.gradle.kts  proguard-rules.pro
core/crash-handler/: build.gradle.kts
core/crashHandler/: build.gradle.kts
core/editor-lsp/: build.gradle.kts
core/extension/: build.gradle.kts
core/external-editor/: build.gradle.kts
core/file/: build.gradle.kts
core/filetree/: README.md  build.gradle.kts
core/karbon-exec/: build.gradle.kts
core/language-textmate/: build.gradle.kts
core/link2symlink/: build.gradle.kts
core/link2symlink/src/main/cpp/: CMakeLists.txt  link2symlink.cpp
core/loader/: build.gradle.kts
core/loader/src/main/cpp/: CMakeLists.txt  loader.c
core/logger/: build.gradle.kts
core/main/: build.gradle.kts
core/mutator-engine/: build.gradle.kts
core/proot/: build.gradle.kts
core/proot/src/main/cpp/: CMakeLists.txt  build.h  compat.h
core/proot/src/main/cpp/cli/: cli.c
core/proot/src/main/cpp/execve/: enter.c
core/proot/src/main/cpp/extension/ashmem_memfd/: ashmem_memfd.c
core/proot/src/main/cpp/loader/: assembly-arm64.h  loader-info.awk  loader-info.d  wrap_loader-m32.sh  wrap_loader.sh
core/proot/src/main/cpp/ptrace/: ptrace.c
core/proot/src/main/cpp/talloc/: config.h
core/proot/src/main/cpp/tracee/: mem.c
core/resources/: build.gradle.kts
core/runner/: build.gradle.kts
core/terminal/: build.gradle.kts
core/terminal-emulator/: build.gradle
core/terminal-view/: build.gradle
core/termux-shared/: build.gradle
core/vibe-coding/: Integration.md
core/vibe-coding/agent-runtime/: build.gradle.kts
core/xed/: build.gradle.kts
core/xed/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
core/xed/src/main/cpp/src/: exec-variants.c  termux-exec.c  termux-readlink.c
docs/: APIDocumentation.md  CONTRIBUTING.md  CREATE_PLUGIN.md  KEYBINDS.md  PUBLISHING_PLUGIN.md  REFACTOR_PLAN.md  REFACTOR_TOOLS_SERVICES.md  SESSION_CHANGES_2025_12_16.md  job-logs.txt
docs/termux/: GOOGLE_PLAY_TERMUX.md  INSTALL_TERMUX.md  SETUP_TERMUX.md
editor/: build.gradle.kts
editor-lsp/: build.gradle.kts
editor/editor/: build.gradle.kts
editor/editor-lsp/: build.gradle.kts
editor/language-textmate/: build.gradle.kts
feature/filetree/: build.gradle.kts
feature/git/: build.gradle.kts
feature/plugin/: build.gradle.kts
feature/runner/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/treeview/: build.gradle.kts
features/extensions/: build.gradle.kts
features/git/: build.gradle.kts
features/runner/: build.gradle.kts
features/terminal/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
language-textmate/: build.gradle.kts
libCommons/: build.gradle.kts
libEditor/: build.gradle.kts
libPlugin/: build.gradle.kts
libPlugin/src/main/: AndroidManifest.xml
libRunner/: build.gradle.kts
libTreeView/: build.gradle.kts
libmarkdown/: build.gradle.kts
libsettings/: build.gradle.kts
plugin-sdk/: .gitignore  README.md  build-auto.sh  build.gradle.kts  build.sh  generate-sdk.sh  settings.gradle.kts  setup.sh  update.sh
plugin-sdk/.run/: plugin-sdk [shadowJar].run.xml
plugin-sdk/gradle/: libs.versions.toml
scripts/: bump-version.sh
terminal-emulator/: build.gradle
terminal-view/: build.gradle
test_dir/: file1.txt
wasm3/: build.gradle.kts
wasm3/src/main/cpp/: CMakeLists.txt  jni.c  wasm3.cpp
wasm3/src/main/cpp/m3/: cmake_install.cmake  wasm3.h
xedPlugin/: build.gradle.kts  proguard-rules.pro
(+3079 files in other folders)
